# murmur

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  HOMEBREW_OPENTUI_V1_PLAN.md  LICENSE  MANIFEST.in  MIGRATION_PLAN.md  README.md  RELEASE_BREW_V1.md  SECURITY.md  install  package-lock.json  package.json  plan.md  pyproject.toml  sonar-project.properties
.codex/environments/: environment.toml
.github/: ACTIONS_PINNING.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/scripts/: get_manifest_version.py  get_wheel_version.py
.github/workflows/: build.yml  ci.yml  precommit-autoupdate.yml  readme-tui-showcase.yml  release.yml  security.yml  sonarcloud.yml  tui-showcase.yml
configs/: default.toml
configs/security/: pip-audit-ignore.txt
docs/: release-flow.md
docs/architecture/: service-platform.md
scripts/: brew_test_local.sh  check_version_sync.py  generate_tui_showcase.py  precommit_brew_formula.sh  precommit_tui_showcase.sh  release_tag.py  requirements-tui-showcase.txt  reset-local.sh  termtosvg_compat.py  update_tap_formula.py
scripts/ci/: run_pip_audit.sh
scripts/templates/: murmur-preview.rb.tpl  murmur.rb.tpl  whisper-local-preview.rb.tpl  whisper-local.rb.tpl
src/murmur/: __main__.py  archive_extract.py  bridge.py  cli.py  config.py  console.py  hotkey.py  logo.py  model_manager.py  model_ops.py  output.py  service_manager.py  status_indicator.py  transcribe.py  tui_runtime.py  uninstall.py  upgrade.py  vad.py
src/murmur/platform/: __init__.py  capabilities.py  factory.py  providers.py
src/whisper_local/: __init__.py  __main__.py  archive_extract.py  audio.py  audio_file.py  bridge.py  cli.py  config.py  default_config.toml  hotkey.py  model_manager.py  model_ops.py  model_task_queue.py  noise.py  output.py  service_manager.py  service_state.py  status_indicator.py  transcribe.py  transcript_store.py  tui.py  tui_runtime.py  uninstall.py  upgrade.py  vad.py
src/whisper_local/platform/: __init__.py  factory.py  providers.py
tests/: test_archive_extract.py  test_audio.py  test_audio_file.py  test_bridge.py  test_check_version_sync.py  test_cli.py  test_config.py  test_console.py  test_generate_tui_showcase_script.py  test_hotkey.py  test_install_script.py  test_model_manager.py  test_model_ops.py  test_model_task_queue.py  test_noise.py  test_output.py  test_platform_factory.py  test_platform_providers.py  test_release_tag.py  test_run_pip_audit.py  test_service_manager.py  test_status_indicator.py  test_termtosvg_compat.py  test_transcribe.py  test_transcript_store.py  test_tui_runtime.py  test_uninstall.py  test_update_tap_formula.py  test_upgrade.py  test_vad.py
tui/: bunfig.toml  package.json  tsconfig.build.json  tsconfig.json
tui/scripts/: build-release.ts  mock-demo-backend.ts
tui/src/: app.tsx  index.tsx  types.ts
tui/src/component/: brand-title.tsx  exit-confirm-modal.test.tsx  exit-confirm-modal.tsx  footer.test.tsx  footer.tsx  header.test.tsx  header.tsx  hotkey-modal.test.tsx  hotkey-modal.tsx  log-panel.tsx  model-item.test.tsx  model-item.tsx  model-manager-config.ts  model-manager.test.tsx  model-manager.tsx  runtime-switch-confirm-modal.tsx  settings-edit-modal.test.tsx  settings.tsx  (+14 more)
(+22 files in other folders)
