[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whisper-local"
dynamic = ["version"]
description = "Local real-time voice transcription TUI using Whisper"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Mark Marryatt", email = "mark@insyte.solutions" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
  "faster-whisper>=1.0.0",
  "huggingface-hub>=0.24.0",
  "numpy>=1.24.0",
  "pyobjc-framework-Quartz>=9.0; sys_platform == 'darwin'",
  "python-xlib>=0.33; sys_platform == 'linux'",
  "pywin32>=306; sys_platform == 'win32'",
  "pyperclip>=1.8.2",
  "sounddevice>=0.4.6",
  "tomli-w>=1.0.0",
  "websockets>=12.0",
]

[project.urls]
Homepage = "https://github.com/mjmammoth/whisper.local"
Source = "https://github.com/mjmammoth/whisper.local"
"Bug Tracker" = "https://github.com/mjmammoth/whisper.local/issues"
Changelog = "https://github.com/mjmammoth/whisper.local/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "build>=1.0",
  "mypy>=1.0",
  "pytest>=7.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "termtosvg>=1.1.0",
  "pyte>=0.8",
]
rnnoise = ["pyrnnoise>=0.4.3"]
vad = ["webrtcvad>=2.0.10"]

[project.scripts]
whisper-local = "whisper_local.cli:main"
"whisper.local" = "whisper_local.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
whisper_local = ["default_config.toml"]

[tool.setuptools_scm]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I"]
ignore = ["E101", "E501", "I001"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.coverage.run]
relative_files = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/whisper_local --cov-report=term-missing --cov-fail-under=70"
